tests/fixtures/invalid/tuple_none.py
# Cannot call tuple() with None
x = tuple(None)
